--- a/后台/package.json
+++ b/后台/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.18.0",
     "clipboard": "^2.0.4",
     "codemirror": "^5.46.0",
+    "core-js": "^2.6.11",
     "dayjs": "^1.8.0",
     "echarts": "^4.8.0",
     "echarts-wordcloud": "^1.1.3",
